Updated Basics Examples

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "The data required to run this tour is located in a zip file called `archive.zip` in the same directory as the notebooks. Head to the Dataset browser on Hopsworks and unzip it.\n",
     "\n",
-    "## Features and Feature Groups\n",
+    "## 🧑🏻‍🏫 Features and Feature Groups\n",
     "\n",
     "The Hopsworks feature store is a centralized repository, within an organization, to manage machine learning features. A feature is a measurable property of a phenomenon. It could be a simple value such as the age of a customer, or it could be an aggregated value, such as the number of transactions made by a customer in the last 30 days.\n",
     "\n",
@@ -39,7 +39,7 @@
     "\n",
     "In this notebook we are going to focus on the left side of the picture above. In particular how data engeneers can create features and push them to the Hopsworks feature store so that they are available to the data scientists\n",
     "\n",
-    "### HSFS library\n",
+    "### 🧑🏻‍🏫 HSFS library\n",
     "\n",
     "The Hopsworks feature feature store library is called `hsfs` (**H**opswork**s** **F**eature **S**tore). \n",
     "The library is Apache V2 licensed and available [here](https://github.com/logicalclocks/feature-store-api). The library is currently available for Python and JVM languages such as Scala and Java.\n",
@@ -68,7 +68,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>15</td><td>application_1652868601260_0023</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1652868601260_0023/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-31-0.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1652868601260_0023_01_000001/hsfs_basics__maksym00\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>26</td><td>application_1653473648291_0122</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-17-208.eu-north-1.compute.internal:8089/proxy/application_1653473648291_0122/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-16-76.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1653473648291_0122_01_000001/Basics__maksym00\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -98,7 +98,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Engineering\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 👷🏼‍♂️ Data Engineering\n",
     "\n",
     "We are going to use a dataset containing information related to a chain of deparment stores. The dataset is taken from [Kaggle](https://www.kaggle.com/manjeetsingh/retaildataset?select=Features+data+set.csv).\n",
     "\n",
@@ -106,6 +113,13 @@
     "- `stores_fg`: it's going to contain features related to the store itself. Mainly the category, the number of deparmetns and the size.\n",
     "- `sales_fg`: it's going to contain sales features for each store/deparment over the weeks. \n",
     "- `exogenous_fg`: it's going to contain features which are not related to the stores themselves, but they have an effect on sales. These features are, for instance, the gas price, the unemployment rate, temperature in the area and so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ⬇️ Loading Data"
    ]
   },
   {
@@ -140,7 +154,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Engineering Stores"
+    "## 🧑🏻‍🔬 Feature Engineering and Feature Group Creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ⛳️ Stores Dataset\n",
+    "\n",
+    "Create a feature group named `store_fg`. The store is the primary key uniquely identifying all the remaining features in this feature group."
    ]
   },
   {
@@ -160,15 +183,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create `store_fg` feature group\n",
-    "\n",
-    "Create a feature group named `store_fg`. The store is the primary key uniquely identifying all the remaining features in this feature group."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -176,7 +190,7 @@
    "source": [
     "store_fg_meta = fs.create_feature_group(\n",
     "    name = \"store_fg\",\n",
-    "    version = 2,\n",
+    "    version = 1,\n",
     "    primary_key = ['store'],\n",
     "    description = \"Store related features\",\n",
     "    online_enabled = True\n",
@@ -203,7 +217,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Engineering Sales"
+    "#### ⛳️ Sales Dataset\n",
+    "\n",
+    "Differently from the `store_fg`, for the `sales_fg` we are going to define a composite primary key. This means that each entry in the `sales_fg` is going to be uniquely identified by the store, the department and the week. In this case we are going to specify also a partition key. Partitioning is a tool available at your disposal to improve the performances of querying a feature group."
    ]
   },
   {
@@ -243,15 +259,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create `sales_fg` feature group\n",
-    "\n",
-    "Differently from the `store_fg`, for the `sales_fg` we are going to define a composite primary key. This means that each entry in the `sales_fg` is going to be uniquely identified by the store, the department and the week. In this case we are going to specify also a partition key. Partitioning is a tool available at your disposal to improve the performances of querying a feature group."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -282,12 +289,12 @@
    "outputs": [],
    "source": [
     "sales_part_fg_meta = fs.create_feature_group(\n",
-    "    name=\"sales_fg\",\n",
-    "    version=2,\n",
-    "    partition_key=['store'],\n",
-    "    description=\"Sales related features\",\n",
-    "    time_travel_format=None,                                                                                          \n",
-    "    statistics_config=False\n",
+    "    name = \"sales_fg\",\n",
+    "    version = 2,\n",
+    "    partition_key = ['store'],\n",
+    "    description = \"Sales related features\",\n",
+    "    time_travel_format = None,                                                                                          \n",
+    "    statistics_config = False\n",
     ")\n",
     "\n",
     "sales_part_fg_meta.save(sales_fg)"
@@ -299,9 +306,9 @@
    "source": [
     "You can enable a feature group to be online by setting the `online_enabled` flag to true. \n",
     "\n",
-    "By default `HSFS` configures the feature group such that new feature data that gets saved or inserted is written to the offline feature store. If `online_enabled=True`, additionally, the data is saved to the online storage of the feature store. Note that the insert and save to both storages is not transactional.\n",
+    "By default `HSFS` configures the feature group such that new feature data that gets saved or inserted is written to the offline feature store. If `online_enabled = True`, additionally, the data is saved to the online storage of the feature store. Note that the insert and save to both storages is not transactional.\n",
     "\n",
-    "If you want to create a purely online feature group. Save the feature group with `online_enabled=True` but with an empty dataframe and subsequently use the insert with `storage=\"online\"` to overwrite the default and write to the online feature store only."
+    "If you want to create a purely online feature group. Save the feature group with `online_enabled = True` but with an empty dataframe and subsequently use the insert with `storage = \"online\"` to overwrite the default and write to the online feature store only."
    ]
   },
   {
@@ -311,12 +318,11 @@
    "outputs": [],
    "source": [
     "sales_part_fg_meta = fs.create_feature_group(\n",
-    "    name=\"sales_fg\",\n",
-    "    version=3,\n",
-    "    primary_key=['store', 'dept', 'date'],\n",
-    "    online_enabled=True,\n",
-    "    description=\"Sales related features\",\n",
-    "    online_enabled = True\n",
+    "    name = \"sales_fg\",\n",
+    "    version = 3,\n",
+    "    primary_key = ['store', 'dept', 'date'],\n",
+    "    online_enabled = True,\n",
+    "    description = \"Sales related features\"\n",
     ")\n",
     "\n",
     "sales_part_fg_meta.save(sales_fg)"
@@ -326,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Engineering Exogenous features\n",
+    "#### ⛳️ Exogenous Dataset with **integer** datetime\n",
     "\n",
     "This feature group will contain exogenous features that can influence sales, but are not under the control of the distribution chain. These are the unemployment, the consumer price index (cpi) and so on.\n",
     "We are going to write these features as they are in the feature store"
@@ -336,13 +342,199 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|      date|\n",
+      "+----------+\n",
+      "|05/02/2010|\n",
+      "|12/02/2010|\n",
+      "|19/02/2010|\n",
+      "|26/02/2010|\n",
+      "|05/03/2010|\n",
+      "+----------+\n",
+      "only showing top 5 rows"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_csv.select('date').show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import udf\n",
+    "from datetime import datetime\n",
+    "from pyspark.sql.types import LongType\n",
+    "\n",
+    "\n",
+    "def timestamp_2_time(x):\n",
+    "    dt_obj = datetime.strptime(x, '%d/%m/%Y')\n",
+    "    dt_obj = dt_obj.timestamp() * 1000\n",
+    "    return int(dt_obj)\n",
+    "\n",
+    "timestamp_2_time_udf = udf(timestamp_2_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-------------+-----------+----------+\n",
+      "|store|         date|temperature|fuel_price|\n",
+      "+-----+-------------+-----------+----------+\n",
+      "|    1|1265328000000|      42.31|     2.572|\n",
+      "|    1|1265932800000|      38.51|     2.548|\n",
+      "|    1|1266537600000|      39.93|     2.514|\n",
+      "|    1|1267142400000|      46.63|     2.561|\n",
+      "|    1|1267747200000|       46.5|     2.625|\n",
+      "+-----+-------------+-----------+----------+\n",
+      "only showing top 5 rows"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_df = exogenous_csv.withColumn('date', timestamp_2_time_udf('date'))\n",
+    "\n",
+    "exogenous_df.select(exogenous_df.columns[:4]).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('date', 'string')]"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_df.select('date').dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-------------+-----------+----------+\n",
+      "|store|         date|temperature|fuel_price|\n",
+      "+-----+-------------+-----------+----------+\n",
+      "|    1|1265328000000|      42.31|     2.572|\n",
+      "|    1|1265932800000|      38.51|     2.548|\n",
+      "|    1|1266537600000|      39.93|     2.514|\n",
+      "|    1|1267142400000|      46.63|     2.561|\n",
+      "|    1|1267747200000|       46.5|     2.625|\n",
+      "+-----+-------------+-----------+----------+\n",
+      "only showing top 5 rows"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_df = exogenous_df.withColumn(\"date\",F.col(\"date\").cast(LongType()))\n",
+    "\n",
+    "exogenous_df.select(exogenous_df.columns[:4]).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('date', 'bigint')]"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_df.select('date').dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-------------+-----------+----------+---------+\n",
+      "|store|         date|temperature|fuel_price|markdown1|\n",
+      "+-----+-------------+-----------+----------+---------+\n",
+      "|    1|1265328000000|      42.31|     2.572|       NA|\n",
+      "|    1|1265932800000|      38.51|     2.548|       NA|\n",
+      "|    1|1266537600000|      39.93|     2.514|       NA|\n",
+      "|    1|1267142400000|      46.63|     2.561|       NA|\n",
+      "|    1|1267747200000|       46.5|     2.625|       NA|\n",
+      "+-----+-------------+-----------+----------+---------+\n",
+      "only showing top 5 rows"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_df.select(exogenous_df.columns[:5]).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exogenous_fg_meta = fs.create_feature_group(\n",
+    "    name = \"exogenous_fg\",\n",
+    "    version = 1,\n",
+    "    primary_key = ['store', 'date'],\n",
+    "    description = \"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "    online_enabled = True,\n",
+    "    event_time = ['date']\n",
+    ")\n",
+    "\n",
+    "exogenous_fg_meta.save(exogenous_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ⛳️ Exogenous Dataset with **date** datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg = exogenous_csv.withColumn('date', F.to_date(\"date\", 'dd/MM/yyy'))\n",
     "\n",
     "exogenous_fg_meta = fs.create_feature_group(\n",
     "    name = \"exogenous_fg\",\n",
-    "    version = 1,\n",
+    "    version = 2,\n",
     "    primary_key = ['store', 'date'],\n",
     "    description = \"External features that influence sales, but are not under the control of the distribution chain\",\n",
     "    online_enabled = True\n",
@@ -355,14 +547,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Append additional data\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔮 Append additional data\n",
     "\n",
     "You can add additional data to a feature group by calling the `insert` method. In the example below we assume that we got also the data for 2013 and we are going to append it to the existing `exogenous_fg`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,16 +570,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg_meta = fs.get_feature_group(\n",
     "    name = 'exogenous_fg',\n",
-    "    version = 1\n",
+    "    version = 2\n",
     ")\n",
     "\n",
-    "exogenous_fg_meta.insert(exogenous_fg_2013)"
+    "#exogenous_fg_meta.insert(exogenous_fg_2013)"
    ]
   },
   {
@@ -394,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Append an additional feature"
+    "## 🔮 Append an additional feature"
    ]
   },
   {
@@ -408,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,14 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fac041b3280>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f446d8b5490>"
      ]
     }
    ],
@@ -436,24 +635,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Delete a feature group\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🧬 Delete a feature group\n",
     "\n",
     "You can call the `delete` method on a feature group to delete the entire feature group."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg_meta = fs.create_feature_group(\n",
     "    name = \"exogenous_fg\",\n",
-    "    version = 2,\n",
+    "    version = 3,\n",
     "    primary_key = ['store', 'date'],\n",
     "    description = \"External features that influence sales, but are not under the control of the distribution chain\",\n",
-    "    time_travel_format=None,                                                                                        \n",
-    "    statistics_config=False\n",
+    "    time_travel_format = None,                                                                                        \n",
+    "    statistics_config = False\n",
     ")\n",
     "\n",
     "exogenous_fg_meta.save(exogenous_fg)"
@@ -461,11 +667,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exogenous_fg_meta = fs.get_feature_group('exogenous_fg', 2)\n",
+    "exogenous_fg_meta = fs.get_feature_group(\n",
+    "    name = 'exogenous_fg',\n",
+    "    version = 3\n",
+    ")\n",
+    "\n",
     "exogenous_fg_meta.delete()"
    ]
   },
