--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### HSFS `Feature Views` and `Training Datasets`\n",
+    "## 🧑🏻‍🏫 HSFS `Feature Views` and `Training Datasets`\n",
     "\n",
     "`Feature Views` is the third building block of the Hopsworks Feature Store. Feature Views store metadata of our dataset.\n",
     "\n",
@@ -45,7 +45,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>31</td><td>application_1652868601260_0056</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1652868601260_0056/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-31-0.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1652868601260_0056_01_000001/hsfs_basics__maksym00\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>30</td><td>application_1653473648291_0126</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-17-208.eu-north-1.compute.internal:8089/proxy/application_1653473648291_0126/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ip-172-31-16-76.eu-north-1.compute.internal:8044/node/containerlogs/container_e01_1653473648291_0126_01_000001/Basics__maksym00\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -77,7 +77,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a `Feature View` from a query\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔮 Create a `Feature View` from a query\n",
     "\n",
     "In the previous notebook ([feature_exploration](./feature_exploration.ipynb)) we walked through how to explore and query the Hopsworks feature store using HSFS. We can use the queries produced in the previous notebook to create a `Feature Views`."
    ]
@@ -95,7 +102,7 @@
     "\n",
     "exogenous_fg = fs.get_feature_group(\n",
     "    name = 'exogenous_fg',\n",
-    "    version = 1\n",
+    "    version = 2\n",
     ")\n",
     "\n",
     "query = sales_fg.select_all()\\\n",
@@ -131,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_view.FeatureView object at 0x7f194fd99b20>"
+      "<hsfs.feature_view.FeatureView object at 0x7fa0d5e6dbe0>"
      ]
     }
    ],
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[31, 34, datetime.date(2010, 2, 5), 19443.48, 0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.835, '7.808', '210.3399684']"
+      "[]"
      ]
     }
    ],
@@ -208,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "\n",
+    "## 🧑🏻‍🔬 Training Dataset Creation"
    ]
   },
   {
@@ -271,22 +280,22 @@
    "source": [
     "To create training dataset we use `FeatureView.create_training_dataset()` method.\n",
     "\n",
-    "It will inherit the name of FeatureView.\n",
+    "⚠️ Some important things:\n",
+    "- It will inherit the name of FeatureView.\n",
     "\n",
-    "The feature store currently supports the following data formats for\n",
+    "- The feature store currently supports the following data formats for\n",
     "training datasets: **tfrecord, csv, tsv, parquet, avro, orc**.\n",
     "\n",
-    "We can choose necessary format using **data_format** parameter.\n",
+    "- We can choose necessary format using **data_format** parameter.\n",
     "\n",
+    "- Also we can specify split ratio using **splits** parameter.\n",
     "\n",
-    "Also we can specify split ratio using **splits** parameter.\n",
-    "\n",
-    "**train_split** - specify which split will be used for training."
+    "- **train_split** - specify which split will be used for training."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -338,15 +347,13 @@
       "+-----+----+----------+------------+----------+--------------------------+\n",
       "|store|dept|      date|weekly_sales|is_holiday|sales_last_month_store_dep|\n",
       "+-----+----+----------+------------+----------+--------------------------+\n",
-      "|   15|   1|2010-02-05|    12239.38|     false|                       0.0|\n",
-      "|   15|  10|2010-02-05|     9444.31|     false|                       0.0|\n",
-      "|   15|  11|2010-02-05|    13259.31|     false|                       0.0|\n",
-      "|   15|  12|2010-02-05|     2360.06|     false|                       0.0|\n",
-      "|   15|  13|2010-02-05|    19437.35|     false|                       0.0|\n",
+      "|    1|   1|2010-03-05|     21827.9|     false|                 131963.08|\n",
+      "|    1|  10|2010-03-05|    33299.27|     false|        119772.36000000002|\n",
+      "|    1|  11|2010-03-05|     19082.9|     false|                  81986.75|\n",
+      "|    1|  12|2010-03-05|    10239.06|     false|                  35284.96|\n",
+      "|    1|  13|2010-03-05|    40423.95|     false|                 153770.69|\n",
       "+-----+----+----------+------------+----------+--------------------------+\n",
-      "only showing top 5 rows\n",
-      "\n",
-      "VersionWarning: No version provided for creating training dataset, incremented version to `2`."
+      "only showing top 5 rows"
      ]
     }
    ],
@@ -359,6 +366,129 @@
     ")\n",
     "\n",
     "df.select(['store', 'dept', 'date', 'weekly_sales', 'is_holiday', 'sales_last_month_store_dep']).show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🔮 Creating Training Datasets with Event Time filter\n",
+    "\n",
+    "First of all lets import **datetime** from datetime library and set up a time format.\n",
+    "\n",
+    "Then we can define start_time point and end_time point.\n",
+    "\n",
+    "Finally we can create training dataset with data in specific time bourders. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def timestamp_2_time(x):\n",
+    "    dt_obj = datetime.strptime(x, '%Y-%m-%d')\n",
+    "    dt_obj = dt_obj.timestamp() * 1000\n",
+    "    return int(dt_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = timestamp_2_time('2008-01-01')\n",
+    "end_time = timestamp_2_time('2012-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exogenous_fg = fs.get_feature_group(\n",
+    "    name = 'exogenous_fg',\n",
+    "    version = 1\n",
+    ")\n",
+    "\n",
+    "query = exogenous_fg.select_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exogenous_fv = fs.create_feature_view(\n",
+    "    name = 'exogenous_fg_2008_2012',\n",
+    "    version = 1,\n",
+    "    query = query\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td_version, td_job = exogenous_fv.create_training_dataset(\n",
+    "    description = 'exogenous_fg_filtered',\n",
+    "    version = 1,\n",
+    "    data_format = 'csv',\n",
+    "    write_options = {'wait_for_job': True},\n",
+    "    start_time = start_time,\n",
+    "    end_time = end_time,\n",
+    "    statistics_config={\"enabled\": False, \"histograms\": False, \"correlations\": False, \"exact_uniqueness\": False}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔬 Dataset Retrieving\n",
+    "\n",
+    "To retrieve training dataset from Feature Store we can use `get_training_dataset_splits()` or `get_training_dataset()` methods. \n",
+    "\n",
+    "If version is not provided - new one will be created.\n",
+    "If version is provided and version exists - retrieves trainining dataset and returns as dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row(store=26, date=1265328000000, temperature=9.55, fuel_price=2.788, markdown1='NA', markdown2='NA', markdown3='NA', markdown4='NA', markdown5='NA', cpi='131.5279032', unemployment='8.488', is_holiday=False)\n",
+      "VersionWarning: No version provided for creating training dataset, incremented version to `2`."
+     ]
+    }
+   ],
+   "source": [
+    "td_version, df = exogenous_fv.get_training_dataset(\n",
+    "    start_time = start_time,\n",
+    "    end_time = end_time\n",
+    ")\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
