Replace inputs with instances

--- a/notebooks/ml/serving/docker_and_kubernetes/python/model_serving_sklearn.ipynb
+++ b/notebooks/ml/serving/docker_and_kubernetes/python/model_serving_sklearn.ipynb
@@ -335,7 +335,7 @@
    ],
    "source": [
     "for i in range(20):\n",
-    "    data = {\"inputs\" : [best_model.input_example]}\n",
+    "    data = {\"instances\" : [best_model.input_example]}\n",
     "    predictions = irisclassifier.predict(data)\n",
     "    print(predictions)"
    ]
