--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -775,7 +775,7 @@
    ],
    "source": [
     "for i in range(10):\n",
-    "    data = {\"inputs\" : [best_model.input_example]}\n",
+    "    data = {\"instances\" : [best_model.input_example]}\n",
     "    predictions = irisclassifier.predict(data)\n",
     "    print(predictions)"
    ]
